add layout frineds list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">VKFriends</string>
     <string name="title">Вас приветствует приложение "Друзья Вк" Пожалуйста, нажмите кнопку Войти, чтобы увидеть ваших друзей</string>
     <string name="button_title">Войти</string>
+    <string name="hint_query">Enter your query here</string>
 </resources>
