--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title">Вас приветствует приложение "Друзья Вк" Пожалуйста, нажмите кнопку Войти, чтобы увидеть ваших друзей</string>
     <string name="button_title">Войти</string>
     <string name="hint_query">Enter your query here</string>
+    <string name="no_items">У вас нет друзей :(</string>
+    <string name="incorrect_data">"Ошибка при логине "</string>
 </resources>
